k8s/example-1/ingress.yml


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: example-1
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/tags: Environment=Development,Team=DevOps,Project=app
spec:
  ingressClassName: alb
  rules:
   - host: app-1.zubaidov.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-1
                port: 
                  number: 80
